[package]
name = "hash-trie"
version = "0.3.0"
authors = ["Mitchell Keith Bloch <bazald@gmail.com>"]
description = "Hash Array Mapped Trie (HAMT) Immutable Set Implementation"
readme = "README.md"
edition = "2018"
repository = "https://github.com/bazald/hash-trie/"
license = "MPL-2.0"
keywords = ["memory", "concurrency", "performance", "immutable", "generic"]

[dependencies]
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
im = "15.0.0"
rand = "0.8.3"

[features]
default = []
parallel = ["rayon"]
std = []
