[package]
name = "hash-trie"
version = "0.4.0"
authors = ["Mitchell Keith Bloch <bazald@gmail.com>"]
description = "Hash Array Mapped Trie (HAMT) Immutable Set Implementation"
readme = "README.md"
edition = "2018"
repository = "https://github.com/bazald/hash-trie/"
license = "MPL-2.0"
keywords = ["hashmap", "nostd", "concurrency", "immutable", "generic"]

[dependencies]
async-recursion = "^0.3.2"
fnv = "^1.0.7"
futures = "^0.3.16"

[dev-dependencies]
im = "^15.0.0"
rand = "^0.8.3"
tokio = { version = "^1.13.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
