[package]
name = "hash-trie"
version = "0.4.0"
authors = ["Mitchell Keith Bloch <bazald@gmail.com>"]
description = "Hash Array Mapped Trie (HAMT) Immutable Set Implementation"
readme = "README.md"
edition = "2018"
repository = "https://github.com/bazald/hash-trie/"
license = "MPL-2.0"
keywords = ["hashmap", "nostd", "concurrency", "immutable", "generic"]

[dependencies]
async-recursion = "^0.3.2"
fnv = { version = "^1.0.7", default-features = false }
futures-core = { version = "^0.3.17", default-features = false, features = ["alloc"] }
futures-util = { version = "^0.3.17", default-features = false, features = ["alloc", "async-await", "async-await-macro"] }

[dev-dependencies]
futures-executor = "^0.3.17"
im = "^15.0.0"
rand = "^0.8.3"
tokio = { version = "^1.13.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
